--- a/01_HW/playlist.html
+++ b/01_HW/playlist.html
@@ -7,40 +7,32 @@
   <link rel="stylesheet" href="playlist.css" />
 </head>
 <body>
-  <h1>Favorite Songs</h1>
+  <h1>My Favorite Songs</h1>
 
   <table>
     <thead>
       <tr>
         <th>Song Name</th>
-        <th>Artist Name</th>
-        <th>Year</th>
-        <th>Image</th>
-        <th>YouTube Video</th>
+        <th>Tags</th>
+        <th>Video</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>Talk to me more</td>
-        <td>Nathan Goshen</td>
-        <td>2011</td>
-        <td><img src="https://img.youtube.com/vi/GvF3nQhR9K0/hqdefault.jpg" alt="Talk to me more"></td>
+        <td>Israeli Rock</td>
         <td>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/XUtrAfFhAfo?si=6EgoMSKNvJ9ozaXl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </tr>
       <tr>
         <td>Thinking About It (Let It Go)</td>
-        <td>Nathan Goshen</td>
-        <td>2015</td>
-        <td><img src="https://img.youtube.com/vi/HMUDVMiITOU/hqdefault.jpg" alt="Thinking About It"></td>
+        <td>Israeli Rock</td>
         <td>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/duiBz9370XM?si=KE8ViRPcGyvGeCgk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </tr>
       <tr>
         <td>It's our</td>
-        <td>Nathan Goshen</td>
-        <td>2017</td>
-        <td><img src="https://img.youtube.com/vi/1b6oJmK1h6Y/hqdefault.jpg" alt="It's our"></td>
+        <td>Israeli Rock</td>
         <td>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/hBHl9dvdELE?si=GjVrFzg3DTr2g-a5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </td>
