--- a/01_HW/playlist.html
+++ b/01_HW/playlist.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="playlist.css" />
 </head>
 <body>
-  <h1>My Favorite Songs</h1>
+  <h1 class="header-blue">My Favorite Songs</h1>
 
   <table>
-    <thead>
+    <thead class="header-blue">
       <tr>
         <th>Song Name</th>
         <th>Tags</th>
@@ -18,7 +18,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
+      <tr class="highlight-row">
         <td>Talk to me more</td>
         <td>Israeli Rock</td>
         <td>
