--- a/01_HW/playlist.html
+++ b/01_HW/playlist.html
@@ -19,22 +19,61 @@
     </thead>
     <tbody>
       <tr class="highlight-row">
-        <td>Talk to me more</td>
+        <td>
+          <a href="https://youtu.be/Q1y9GKx9VpY"
+             target="_blank"
+             class="song-link">
+             Talk to me more
+          </a>
+        </td>
         <td>Israeli Rock</td>
         <td>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/XUtrAfFhAfo?si=6EgoMSKNvJ9ozaXl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe width="560" height="315" 
+          src="https://www.youtube.com/embed/XUtrAfFhAfo?si=6EgoMSKNvJ9ozaXl" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          referrerpolicy="strict-origin-when-cross-origin" 
+          allowfullscreen>
+        </iframe>
       </tr>
       <tr>
-        <td>Thinking About It (Let It Go)</td>
+        <td>
+          <a href="https://youtu.be/duiBz9370XM?si=CNcnB3nR5bfwu-0o"
+          target="_blank"
+          class="song-link">
+          Thinking About It (Let It Go)
+         </a>
+        </td>
         <td>Israeli Rock</td>
         <td>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/duiBz9370XM?si=KE8ViRPcGyvGeCgk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe width="560" height="315"
+          src="https://www.youtube.com/embed/duiBz9370XM?si=KE8ViRPcGyvGeCgk" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          referrerpolicy="strict-origin-when-cross-origin" 
+          allowfullscreen>
+        </iframe>
       </tr>
       <tr>
-        <td>It's our</td>
+        <td>
+          <a href="https://youtu.be/hBHl9dvdELE?si=JQZAg3YaMH2KZk-l"
+          target="_blank"
+          class="song-link">
+          It's our
+         </a>
+        </td>
         <td>Israeli Rock</td>
         <td>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/hBHl9dvdELE?si=GjVrFzg3DTr2g-a5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe width="560" height="315"
+          src="https://www.youtube.com/embed/hBHl9dvdELE?si=GjVrFzg3DTr2g-a5"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen>
+         </iframe>
         </td>
       </tr>
     </tbody>
