--- a/AllHtmlElements/tags.html
+++ b/AllHtmlElements/tags.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Tags Reference - Comprehensive List</title>
-    <link rel="stylesheet" href="SKINS/modern.css">
+    <link id="skinStylesheet" rel="stylesheet" href="SKINS/modern.css">
 </head>
 
 <body>
+
+    <button id="changeSkinBtn">Change Skin</button>
+
     <header>
         <h1>Complete HTML Tags Reference Guide</h1>
         <p>A comprehensive demonstration of HTML tags without CSS styling</p>
@@ -632,6 +635,8 @@ function example() {
         <p>Total tags demonstrated: 100+</p>
         <small>This page contains most HTML5 tags for educational purposes</small>
     </footer>
+
+    <script src="skinsSwitcher.js"></script>
 </body>
 
 </html>
